fix: responsive shift.update page

--- a/public/css/update.css
+++ b/public/css/update.css
@@ -8,5 +8,6 @@ th, td {
     font-size: 10px;
 }
 input[type='checkbox']{
-    zoom: 2;
+    width: 18px;
+    height: 18px;
 }
